# renderer

./: .gitignore  Cargo.toml  README.md
examples/: main.rs  quads.rs  quads_main_thread.rs  quads_render_thread.rs
examples/quads/: hello.frag  hello.frag.spirv  hello.vert  hello.vert.spirv
src/: aspect_ratio.rs  attribute.rs  blend_mode.rs  buffer.rs  capture_stream.rs  clear_color.rs  compile.rs  compiler.rs  compressor.rs  decompressor.rs  ffmpeg_pipe.rs  filter_mode.rs  format.rs  instanced.rs  lib.rs  pipeline.rs  png_encoder.rs  png_writer.rs  primitive.rs  program.rs  render_pass.rs  render_thread.rs  renderer.rs  stream.rs  stream_frame.rs  target.rs  texture.rs  uniform.rs  video_frame.rs  video_recorder.rs  viewport.rs  visibility.rs
src/shaders/: hello.frag  hello.frag.spirv  hello.vert  hello.vert.spirv
