[package]
name = "renderer"
version = "0.1.0"
authors = ["Chris Patuzzo <chris@patuzzo.co.uk>"]
edition = "2021"

[dependencies]
bincode = { version = "2.0.0-alpha.1", optional = true }
bytemuck = "*"
chrono = { version = "*", optional = true }
crossbeam-channel = { version = "*", optional = true }
futures = "*"
lzzzz = { version = "*", optional = true }
noop-waker = "*"
num_cpus = { version = "*", optional = true }
png = { version = "*", optional = true }
shaderc = { version = "*", optional = true }
wgpu = { version = "0.11.0", features = ["spirv"] }
winit = "0.25"

[features]
shader_compilation = ["shaderc"]
frame_to_png = ["png"]
frame_compression = ["bincode", "chrono", "crossbeam-channel", "lzzzz", "num_cpus"]
pipe_to_ffmpeg = ["chrono"]
